# api/routers.go
@@ -2,11 +2,11 @@ package api
 
 import (
 	"github.com/gin-gonic/gin"
-	v1 "github.com/name1e5s/acdc/api/v1"
+	v1 "github.com/name1e5s/acdc/api/admin"
 )
 
 func BindAPIRouters(router *gin.RouterGroup) {
-	apiV1 := router.Group("/v1")
-	apiV1.POST("/login", v1.Login)
-	v1.BindUserRouters(apiV1)
+	apiAdmin := router.Group("/admin")
+	apiAdmin.POST("/login", v1.Login)
+	v1.BindUserRouters(apiAdmin)
 }
