# middleware/jwt.go
@@ -12,53 +12,22 @@ import (
 	"time"
 )
 
-type JWTAuthenticator func(data interface{}, c *gin.Context) bool
+type JWTAuthorizator func(data interface{}, c *gin.Context) bool
+type JWTAuthenticator func(c *gin.Context) (interface{}, error)
+type JWTPayloadFunc func(data interface{}) jwt.MapClaims
+type JWTIdentityHandler func(c *gin.Context) interface{}
 
-func getJWTMiddleware(jwtAuthenticator JWTAuthenticator) (authMiddleware *jwt.GinJWTMiddleware) {
+func getJWTMiddleware(authorizator JWTAuthorizator, authenticator JWTAuthenticator, payloadFunc JWTPayloadFunc, handler JWTIdentityHandler) (authMiddleware *jwt.GinJWTMiddleware) {
 	authMiddleware, err := jwt.New(&jwt.GinJWTMiddleware{
-		Realm:       config.GetConfig().JWTConfig.Title,
-		Key:         []byte(config.GetConfig().JWTConfig.Key),
-		Timeout:     time.Hour * 300,
-		MaxRefresh:  time.Hour * 24,
-		IdentityKey: "id",
-		PayloadFunc: func(data interface{}) jwt.MapClaims {
-			if v, ok := data.(model.User); ok {
-				payload, err := json.Marshal(v)
-				if err != nil {
-					log.Panicln(err)
-				}
-				return jwt.MapClaims{
-					"payload": string(payload),
-				}
-			}
-			return jwt.MapClaims{}
-		},
-		IdentityHandler: func(c *gin.Context) interface{} {
-			claims := jwt.ExtractClaims(c)
-			user := model.User{}
-			err := json.Unmarshal([]byte(claims["payload"].(string)), &user)
-			if err != nil {
-				log.Panicln(err)
-			}
-			return user
-		},
-		Authenticator: func(c *gin.Context) (interface{}, error) {
-			var authLoginRequest schema.AuthLoginRequestSchema
-			if err := c.ShouldBind(&authLoginRequest); err != nil {
-				return "", jwt.ErrMissingLoginValues
-			}
-
-			phone := authLoginRequest.Phone
-			password := authLoginRequest.Password
-
-			status, user := service.CheckAuth(phone, password)
-			if status {
-				return user, nil
-			}
-
-			return nil, jwt.ErrFailedAuthentication
-		},
-		Authorizator: jwtAuthenticator,
+		Realm:           config.GetConfig().JWTConfig.Title,
+		Key:             []byte(config.GetConfig().JWTConfig.Key),
+		Timeout:         time.Hour * 300,
+		MaxRefresh:      time.Hour * 24,
+		IdentityKey:     "id",
+		PayloadFunc:     payloadFunc,
+		IdentityHandler: handler,
+		Authenticator:   authenticator,
+		Authorizator:    authorizator,
 		Unauthorized: func(c *gin.Context, code int, message string) {
 			c.JSON(code, gin.H{
 				"code":    code,
@@ -76,36 +45,124 @@ func getJWTMiddleware(jwtAuthenticator JWTAuthenticator) (authMiddleware *jwt.Gi
 	return
 }
 
+func getJWTAdminMiddleWare(authorizator JWTAuthorizator) *jwt.GinJWTMiddleware {
+	adminAuthenticator := func(c *gin.Context) (interface{}, error) {
+		var authLoginRequest schema.AuthLoginRequest
+		if err := c.ShouldBind(&authLoginRequest); err != nil {
+			return "", jwt.ErrMissingLoginValues
+		}
+
+		userName := authLoginRequest.UserName
+		password := authLoginRequest.Password
+
+		status, user := service.CheckAdminAuth(userName, password)
+		if status {
+			return user, nil
+		}
+
+		return nil, jwt.ErrFailedAuthentication
+	}
+	adminPayloadFunc := func(data interface{}) jwt.MapClaims {
+		if v, ok := data.(model.Admin); ok {
+			payload, err := json.Marshal(v)
+			if err != nil {
+				log.Panicln(err)
+			}
+			return jwt.MapClaims{
+				"payload": string(payload),
+			}
+		}
+		return jwt.MapClaims{}
+	}
+	adminHandler := func(c *gin.Context) interface{} {
+		claims := jwt.ExtractClaims(c)
+		user := model.Admin{}
+		err := json.Unmarshal([]byte(claims["payload"].(string)), &user)
+		if err != nil {
+			log.Panicln(err)
+		}
+		return user
+	}
+	return getJWTMiddleware(authorizator, adminAuthenticator, adminPayloadFunc, adminHandler)
+}
+
+func getJWTUserMiddleWare(authorizator JWTAuthorizator) *jwt.GinJWTMiddleware {
+	adminAuthenticator := func(c *gin.Context) (interface{}, error) {
+		var authLoginRequest schema.AuthLoginRequest
+		if err := c.ShouldBind(&authLoginRequest); err != nil {
+			return "", jwt.ErrMissingLoginValues
+		}
+
+		userName := authLoginRequest.UserName
+		password := authLoginRequest.Password
+
+		status, user := service.CheckUserAuth(userName, password)
+		if status {
+			return user, nil
+		}
+
+		return nil, jwt.ErrFailedAuthentication
+	}
+	adminPayloadFunc := func(data interface{}) jwt.MapClaims {
+		if v, ok := data.(model.User); ok {
+			payload, err := json.Marshal(v)
+			if err != nil {
+				log.Panicln(err)
+			}
+			return jwt.MapClaims{
+				"payload": string(payload),
+			}
+		}
+		return jwt.MapClaims{}
+	}
+	adminHandler := func(c *gin.Context) interface{} {
+		claims := jwt.ExtractClaims(c)
+		user := model.User{}
+		err := json.Unmarshal([]byte(claims["payload"].(string)), &user)
+		if err != nil {
+			log.Panicln(err)
+		}
+		return user
+	}
+	return getJWTMiddleware(authorizator, adminAuthenticator, adminPayloadFunc, adminHandler)
+}
+
+func JWTUserAuthenticator() *jwt.GinJWTMiddleware {
+	return getJWTUserMiddleWare(func(data interface{}, c *gin.Context) bool {
+		return true
+	})
+}
+
 func JWTBaseAuthenticator() *jwt.GinJWTMiddleware {
-	return getJWTMiddleware(func(data interface{}, c *gin.Context) bool {
+	return getJWTAdminMiddleWare(func(data interface{}, c *gin.Context) bool {
 		return true
 	})
 }
 
 func JWTReceptionistAuthenticator() *jwt.GinJWTMiddleware {
-	return getJWTMiddleware(func(data interface{}, c *gin.Context) bool {
-		user := data.(model.User)
+	return getJWTAdminMiddleWare(func(data interface{}, c *gin.Context) bool {
+		user := data.(model.Admin)
 		return user.IsReceptionist()
 	})
 }
 
 func JWMaintainerAuthenticator() *jwt.GinJWTMiddleware {
-	return getJWTMiddleware(func(data interface{}, c *gin.Context) bool {
-		user := data.(model.User)
+	return getJWTAdminMiddleWare(func(data interface{}, c *gin.Context) bool {
+		user := data.(model.Admin)
 		return user.IsMaintainer()
 	})
 }
 
 func JWTAccountingAuthenticator() *jwt.GinJWTMiddleware {
-	return getJWTMiddleware(func(data interface{}, c *gin.Context) bool {
-		user := data.(model.User)
+	return getJWTAdminMiddleWare(func(data interface{}, c *gin.Context) bool {
+		user := data.(model.Admin)
 		return user.IsAccounting()
 	})
 }
 
 func JWTSuperUserAuthenticator() *jwt.GinJWTMiddleware {
-	return getJWTMiddleware(func(data interface{}, c *gin.Context) bool {
-		user := data.(model.User)
+	return getJWTAdminMiddleWare(func(data interface{}, c *gin.Context) bool {
+		user := data.(model.Admin)
 		return user.IsSuperUser()
 	})
 }
