# schema/admin.go
@@ -1,0 +1,15 @@
+package schema
+
+type AddNewAdminRequest struct {
+	UserName string `json:"username"`
+	Password string `json:"password"`
+	Role     uint   `json:"role"`
+}
+
+type AddNewAdminResponse CommonFailureSchema
+
+type DeleteAdminRequest struct {
+	UserName string `json:"username"`
+}
+
+type DeleteAdminResponse CommonFailureSchema
