# schema/auth.go
@@ -1,11 +1,11 @@
 package schema
 
-type AuthLoginRequestSchema struct {
-	Phone    string `json:"phone"`
+type AuthLoginRequest struct {
+	UserName string `json:"username"`
 	Password string `json:"password"`
 }
 
-type AuthLoginResponseSchema struct {
+type AuthLoginResponse struct {
 	Code   int    `json:"code"`
 	Token  string `json:"token"`
 	Expire string `json:"expire"`
